[package]
name = "aoc-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-lib = { path = "../aoc-lib" }
arboard = { version = "3.1.1", features = [] }
chrono = "0.4.22"
clap = { version = "4.0.11", features = ["derive"] }
clearscreen = "1.0.10"
itertools = "0.10.5"
regex = "1.6.0"
rust-ini = "0.18.0"
scraper = "0.13.0"
ureq = "2.5.0"
url = "2.3.1"
