[package]
name = "aoc-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc"
crate-type = ["lib"]

[dependencies]
derive_more = "0.99.17"
futures = "0.3.25"
include_dir = "0.7.3"
itertools = "0.10.5"
num = "0.4.0"
once_cell = "1.16.0"
regex = "1.6.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
wasm-timer = "0.2.5"

[build-dependencies]
regex = "1.6.0"
