[package]
name = "aoc-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
aoc-lib = { path = "../aoc-lib" }
bracket-terminal = "=0.8.5"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2"
