[package]
name = "aoc-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
aoc-lib = { path = "../aoc-lib" }
bracket-terminal = "=0.8.5"
console_error_panic_hook = "0.1.7"
futures = "0.3.25"
getrandom = { version = "0.2.8", features = ["js"] }
image = { version = "0.24.4", default-features = false, features = ["png"] }
once_cell = "1.16.0"
rand = "0.8.5"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.60", features = [
    "console",
    "Worker",
    "DedicatedWorkerGlobalScope",
] }
